transflux/deploy/k8s/overlays/homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homereef-transflux
spec:
  rules:
    - host: api.transcode.spacesaver.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homereef-transflux
                port:
                  number: 8000
